# komodo

./: Cargo.toml
.devcontainer/: dev.compose.yaml  devcontainer.json
action/: deploy.ts  run.ts
client/core/rs/src/api/: terminal.rs
client/core/rs/src/entities/: builder.rs  mod.rs  onboarding_key.rs  server.rs  server_onboarding_key.rs  stack.rs  stats.rs
client/core/ts/src/: lib.ts  responses.ts  terminal.ts  types.ts
client/periphery/rs/: Cargo.toml
client/periphery/rs/src/api/: build.rs  compose.rs  container.rs  docker.rs  git.rs  keys.rs  mod.rs  stats.rs  terminal.rs
compose/: compose.env  ferretdb.compose.yaml  mongo.compose.yaml  periphery.compose.yaml
config/: core.config.toml  periphery.config.toml
docsite/: docusaurus.config.ts  package.json
docsite/docs/: intro.md
docsite/docs/setup/: connect-servers.mdx
docsite/src/components/HomepageFeatures/: index.tsx
docsite/src/pages/: index.tsx
example/alerter/: Dockerfile
example/update_logger/: Dockerfile
frontend/: Dockerfile
frontend/public/: manifest.json
frontend/public/client/: lib.d.ts  lib.js  responses.d.ts  terminal.d.ts  terminal.js  types.d.ts  types.js
frontend/src/: router.tsx
frontend/src/components/: util.tsx
frontend/src/components/alert/: details.tsx
frontend/src/components/config/: index.tsx
frontend/src/components/resources/: common.tsx
frontend/src/components/tags/: index.tsx
frontend/src/components/terminal/: container.tsx  index.tsx
frontend/src/lib/: hooks.ts
frontend/src/pages/: resources.tsx
frontend/src/pages/settings/: index.tsx  onboarding.tsx
frontend/src/pages/stack-service/: index.tsx
lib/config/src/: interpolate.rs  lib.rs  load.rs
lib/database/src/: lib.rs
lib/encoding/: Cargo.toml
lib/encoding/src/: channel.rs  json.rs  lib.rs  option.rs  response.rs  result.rs
lib/environment/src/: lib.rs
lib/git/: Cargo.toml
lib/git/src/: clone.rs  commit.rs  lib.rs  pull.rs
lib/keygen/: Cargo.toml
lib/keygen/src/: lib.rs
lib/logger/src/: lib.rs  otel.rs
lib/noise/: Cargo.toml
lib/noise/src/: lib.rs
lib/noise/src/key/: command.rs  mod.rs  private.rs  public.rs
lib/secret_file/: Cargo.toml
lib/secret_file/src/: lib.rs
lib/transport/: Cargo.toml
lib/transport/src/: auth.rs  channel.rs  lib.rs  message.rs  timeout.rs
lib/transport/src/message/: json.rs  login.rs  mod.rs  root.rs  transport.rs
lib/transport/src/message/wrappers/: channel.rs  mod.rs  option.rs  result.rs
lib/transport/src/websocket/: axum.rs  login.rs  mod.rs  tungstenite.rs
scripts/: setup-periphery.py
(+43 files in other folders)
