[package]
name = "keygen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
komodo_client.workspace = true
noise.workspace = true
#
serde_json.workspace = true
colored.workspace = true
anyhow.workspace = true