[package]
name = "transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
encoding.workspace = true
noise.workspace = true
#
derive_variants.workspace = true
serror.workspace = true
#
tokio-tungstenite.workspace = true
pin-project-lite.workspace = true
futures-util.workspace = true
tokio-util.workspace = true
tracing.workspace = true
anyhow.workspace = true
base64.workspace = true
rustls.workspace = true
bytes.workspace = true
tokio.workspace = true
serde.workspace = true
axum.workspace = true
rand.workspace = true
sha1.workspace = true
sha2.workspace = true
uuid.workspace = true
url.workspace = true